# Lean_In

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CURRENT_WORK.md  architecture.md  privacy.md  protocol.md  providers.md
examples/: mock_client.py  provider_config.example.json
schema/: watch-v1.schema.json
src/together_watch/: __init__.py  actions.py  adapters.py  context.py  core.py  costs.py  lifecycle.py  models.py  prefetch.py  prompts.py  provider_response.py  providers.py  recall.py  start_gate.py  subtitles.py  timeline.py  viewing.py  visual.py  worker.py
src/together_watch/prompt_templates/: analysis_background_known.txt  analysis_background_needed.txt  analysis_system.txt  analysis_user.txt  companion_context_zh.txt  knowledge_system.txt  (+1 more)
tests/: test_actions.py  test_adapters.py  test_context.py  test_core.py  test_costs.py  test_lifecycle.py  test_prefetch.py  test_prompts.py  test_provider_response.py  test_providers.py  test_schema.py  test_start_gate.py  test_subtitles.py  test_timeline.py  test_viewing.py  test_visual.py  test_worker.py
web/: README.md  app.js  config.js  index.html  package.json  styles.css
web/lib/: analysis-cost.js  analysis-coverage.js  api.js  conversation.js  host.js  local-sampler.js  media.js  tickets.js  timeline.js  watch-status.js
web/tests/: analysis-cost.test.js  analysis-coverage.test.js  api.test.js  conversation-style.test.js  conversation.test.js  local-sampler.test.js  media.test.js  tickets.test.js  timeline.test.js  watch-status.test.js
(+2 files in other folders)
